--- a/productos.html
+++ b/productos.html
@@ -8,43 +8,85 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar fixed-top">
+    <nav class="navbar  fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="logo" src="img/CHELSI-modified.png" alt=""></a>
             <span class="login" onclick="redirectToLoginPage()">LOGIN</span>
             <img class="carrito" src="img/icons8-carrito-de-compras-60.png" alt="">
-            <img class="flecha" src="img/icons8-flecha-izquierda-32.png" style="display: none;" alt="">
-            <button class="vaciar-carrito" style="display: none;">Vaciar carrito</button>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <img class="flecha-atras" src="img/icons8-flecha-izquierda-32.png" alt="Flecha de regreso">
+            <button class="btn btn-danger vaciar-carrito">Vaciar Carrito</button>
+             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <img class="iconodesurf" src="img/icons8-navegar-ios-17-96.png" alt="">
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="login.html">Categorias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                    </ul>
-                </div>
+              <img class="iconodesurf" src="img/icons8-navegar-ios-17-96.png" alt="">
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <lord-icon class="icon" src="https://cdn.lordicon.com/wmwqvixz.json"
+                  trigger="hover"
+                  colors="primary:#c3a484"
+                  style="width:25px;height:25px">
+                </lord-icon><a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <lord-icon class="icon"
+        src="https://cdn.lordicon.com/ipnwkgdy.json"
+        trigger="hover"
+        colors="primary:#c3a484"
+        style="width:25px;height:25px">
+    </lord-icon>
+    <li class="nav-item dropdown" style="bottom: 28px;
+    left: 30px;
+    margin-bottom: -30px;">
+      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Categorias
+      </a>
+      <ul class="dropdown-menu" style="border: none;
+      margin-bottom: -76px;
+      margin-left: 5px;">
+        <li><a class="dropdown-item" href="#">Remeras</a></li>
+        <li><a class="dropdown-item" href="#">Camisas</a></li>
+        <li><a class="dropdown-item" href="#">Buzos</a></li>
+        <li><a class="dropdown-item" href="#">Tops</a></li>
+      </ul>
+    </li>
+                </li>
+                <li class="nav-item">
+                  <lord-icon class="icon"
+        src="https://cdn.lordicon.com/mqdkoaef.json"
+        trigger="hover"
+        colors="primary:#c3a484"
+        style="width:25px;height:25px">
+    </lord-icon>
+                    <a class="nav-link" href="productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <lord-icon class="icon"
+        src="https://cdn.lordicon.com/srsgifqc.json"
+        trigger="hover"
+        colors="primary:#c3a484"
+        style="width:25px;height:25px">
+    </lord-icon>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <lord-icon class="icon"
+        src="https://cdn.lordicon.com/hrjifpbq.json"
+        trigger="hover"
+        colors="primary:#c3a484"
+        style="width:25px;height:25px">
+    </lord-icon>
+                    <a class="nav-link" href="#">Nosotros</a>
+                  </li>
+              </ul>
+            </div>
+          </div>
         </div>
-    </nav>
+      </nav>
     <section class="productos">
         <div class="card" style="width: 18rem;">
             <img src="img/remera1.png" class="card-img-top" alt="...">
@@ -155,7 +197,48 @@
             </div>
         </div>
     </section>
+    <<div class="espacio" style="display: none;"> 
+      <div class="espacio2" style="display: none;">
+          El carrito está vacío
+      </div>
+  </div>
+  
+    <footer>
+        <div class="div-footer">
+                <div class="div-contacto-footer">
+                    <h4>Información De Contacto</h4>
+                    <ul>
+                      <div>
+                        <img src="img/icons8-gps-96.png" alt=""><li>Dirección: 164 Camilo Isleño, Cordoba, Argentina</li>
+                      </div>
+                      <div>
+                        <img src="img/icons8-mensaje-de-telefono-96.png" alt=""><li>Teléfono: +13572546483</li>
+                      </div>
+                      <div>
+                        <img src="img/icons8-nuevo-post-60.png" alt=""><li>Email: surftyle@gmail.com</li>
+                      </div>
+                    </ul>
+                </div>
+                <div class="div-redes-footer">
+                    <h4>Síguenos en redes sociales</h4>
+                    <ul>
+                      <div>
+                        <img src="img/icons8-facebook-nuevo-60.png" alt=""><li><a href="#">Facebook</i></a></li>
+                      </div>
+                      <div>
+                        <img src="img/icons8-instagram-60.png" alt=""><li><a href="#">Instagram</i></a></li>
+                      </div>
+                      <div>
+                        <img src="img/icons8-twitterx-96.png" alt=""><li><a href="#">Twitter</i></a></li>
+                      </div>
+                    </ul>
+                </div>
+        </div>
+    </footer>
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/mainn.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
