--- a/registarte.html
+++ b/registarte.html
@@ -46,7 +46,7 @@ margin-bottom: -30px;">
   <ul class="dropdown-menu" style="border: none;
   margin-bottom: -76px;
   margin-left: 5px;">
-    <li><a class="dropdown-item" href="categorias/remeras.html">Remeras</a></li>
+    <li><a class="dropdown-item" href="#">Remeras</a></li>
     <li><a class="dropdown-item" href="#">Camisas</a></li>
     <li><a class="dropdown-item" href="#">Buzos</a></li>
     <li><a class="dropdown-item" href="#">Tops</a></li>
@@ -62,70 +62,98 @@ margin-bottom: -30px;">
 </lord-icon>
                 <a class="nav-link" href="productos.html">Productos</a>
               </li>
+              <li class="nav-item">
+                <lord-icon class="icon"
+    src="https://cdn.lordicon.com/srsgifqc.json"
+    trigger="hover"
+    colors="primary:#c3a484"
+    style="width:25px;height:25px">
+</lord-icon>
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <lord-icon class="icon"
+    src="https://cdn.lordicon.com/hrjifpbq.json"
+    trigger="hover"
+    colors="primary:#c3a484"
+    style="width:25px;height:25px">
+</lord-icon>
+                <a class="nav-link" href="#">Nosotros</a>
+              </li>
           </ul>
         </div>
       </div>
     </div>
   </nav>
-  <div class="surftyle">
-    <h2>SURFSTYLE</h2>
-  </div>  
-    <section class="section1">
-        <div class="div1">
-            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="img/fondo.jpg" class="d-block w-100" alt="">
+      <div class="div1-login">
+      <section class="login-section1">
+        <div class="login-div1">
+            <h2>REGISTAR</h2>
+            <form class="form-registar" action="">
+                <div class="input-box">
+                    <label for="user2">Usuario</label>
+                    <input class="input" type="text" id="user2">
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="img/fondo2.jpg" class="d-block w-100" alt="...">
+                <div class="input-box">
+                    <label for="edad2">Edad</label>
+                    <input class="input"  type="number" id="edad2">
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="img/fondo3.jpg" class="d-block w-100"  alt="...">
+                <div class="input-box">
+                    <label for="email2">Email</label>
+                    <input class="input"  type="email" id="email2">
                 </div>
+                <div class="input-box">
+                    <label for="contra2">Contraseña</label>
+                    <input class="input"  type="text" id="contra2">
                 </div>
+                <div>
+                  <button class="boton-ingresar" type="submit">Registrar</button>
+                </div>
+            </form>
+        </div>
+        <div class="div2-login">
+            <div>
+                <img src="img/icons8-navegar-ios-17-96.png" alt="">
             </div>
         </div>
-    </section>
+      </section>
+    </div>
     <footer>
-      <footer>
-        <div class="div-footer">
-                <div class="div-contacto-footer">
-                    <h4>Información De Contacto</h4>
-                    <ul>
-                      <div>
-                        <img src="img/icons8-gps-96.png" alt=""><li>Dirección: 164 Camilo Isleño, Cordoba, Argentina</li>
-                      </div>
-                      <div>
-                        <img src="img/icons8-mensaje-de-telefono-96.png" alt=""><li>Teléfono: +13572546483</li>
-                      </div>
-                      <div>
-                        <img src="img/icons8-nuevo-post-60.png" alt=""><li>Email: surftyle@gmail.com</li>
-                      </div>
-                    </ul>
-                </div>
-                <div class="div-redes-footer">
-                    <h4>Síguenos en redes sociales</h4>
-                    <ul>
-                      <div>
-                        <img src="img/icons8-facebook-nuevo-60.png" alt=""><li><a href="#">Facebook</i></a></li>
-                      </div>
-                      <div>
-                        <img src="img/icons8-instagram-60.png" alt=""><li><a href="#">Instagram</i></a></li>
-                      </div>
-                      <div>
-                        <img src="img/icons8-twitterx-96.png" alt=""><li><a href="#">Twitter</i></a></li>
-                      </div>
-                    </ul>
-                </div>
-        </div>
-    </footer>
+      <div class="div-footer">
+              <div class="div-contacto-footer">
+                  <h4>Información De Contacto</h4>
+                  <ul>
+                    <div>
+                      <img src="img/icons8-gps-96.png" alt=""><li>Dirección: 164 Camilo Isleño, Cordoba, Argentina</li>
+                    </div>
+                    <div>
+                      <img src="img/icons8-mensaje-de-telefono-96.png" alt=""><li>Teléfono: +13572546483</li>
+                    </div>
+                    <div>
+                      <img src="img/icons8-nuevo-post-60.png" alt=""><li>Email: surftyle@gmail.com</li>
+                    </div>
+                  </ul>
+              </div>
+              <div class="div-redes-footer">
+                  <h4>Síguenos en redes sociales</h4>
+                  <ul>
+                    <div>
+                      <img src="img/icons8-facebook-nuevo-60.png" alt=""><li><a href="#">Facebook</i></a></li>
+                    </div>
+                    <div>
+                      <img src="img/icons8-instagram-60.png" alt=""><li><a href="#">Instagram</i></a></li>
+                    </div>
+                    <div>
+                      <img src="img/icons8-twitterx-96.png" alt=""><li><a href="#">Twitter</i></a></li>
+                    </div>
+                  </ul>
+              </div>
+      </div>
+  </footer>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="js/login.js"></script>
     <script src="js/mainn.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/registrar.js"></script>
-    <script src="js/contacto.js"></script>
 </body>
 </html>
